Fix grid items stuck between columns

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -270,6 +270,7 @@ body {
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
 .chip-mui {
+  font-size: 14px !important;
   margin: 2px;
 }
 .chip-mui:hover {
@@ -293,17 +294,15 @@ img {
   filter: grayscale(70%);
 }
 .container img:hover {
-  filter: grayscale(0%);
+  filter: grayscale(0%) contrast(90%);
+
 }
 h1 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin: 0 0 1.45rem;
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
